tests/stage2/valid/assign_op.c
int main(){
    int a = 7;
    a += 3;
    a *= 5;
    a /= 2;
    a ^= 15;
    return a;
}
