tests/stage2/invalid/assign_no_semi.c
int main(){
    a = a + 2
    return 3;
}
